cmake_minimum_required(VERSION 3.8)
project(pwm3)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        CMSIS/Include/arm_common_tables.h
        CMSIS/Include/arm_const_structs.h
        CMSIS/Include/arm_math.h
        CMSIS/Include/cmsis_armcc.h
        CMSIS/Include/cmsis_armclang.h
        CMSIS/Include/cmsis_compiler.h
        CMSIS/Include/cmsis_gcc.h
        CMSIS/Include/core_armv8mbl.h
        CMSIS/Include/core_armv8mml.h
        CMSIS/Include/core_cm0.h
        CMSIS/Include/core_cm0plus.h
        CMSIS/Include/core_cm23.h
        CMSIS/Include/core_cm3.h
        CMSIS/Include/core_cm33.h
        CMSIS/Include/core_cm4.h
        CMSIS/Include/core_cm7.h
        CMSIS/Include/core_sc000.h
        CMSIS/Include/core_sc300.h
        CMSIS/Include/tz_context.h
        config/hpl_dmac_config.h
        config/hpl_gclk_config.h
        config/hpl_pm_config.h
        config/hpl_sysctrl_config.h
        config/hpl_tc_config.h
        config/peripheral_clk_config.h
        examples/driver_examples.c
        examples/driver_examples.h
        hal/include/hal_atomic.h
        hal/include/hal_delay.h
        hal/include/hal_gpio.h
        hal/include/hal_init.h
        hal/include/hal_io.h
        hal/include/hal_pwm.h
        hal/include/hal_sleep.h
        hal/include/hpl_core.h
        hal/include/hpl_delay.h
        hal/include/hpl_dma.h
        hal/include/hpl_gpio.h
        hal/include/hpl_init.h
        hal/include/hpl_irq.h
        hal/include/hpl_missing_features.h
        hal/include/hpl_pwm.h
        hal/include/hpl_reset.h
        hal/include/hpl_sleep.h
        hal/include/hpl_timer.h
        hal/src/hal_atomic.c
        hal/src/hal_delay.c
        hal/src/hal_gpio.c
        hal/src/hal_init.c
        hal/src/hal_io.c
        hal/src/hal_pwm.c
        hal/src/hal_sleep.c
        hal/utils/include/compiler.h
        hal/utils/include/err_codes.h
        hal/utils/include/events.h
        hal/utils/include/parts.h
        hal/utils/include/utils.h
        hal/utils/include/utils_assert.h
        hal/utils/include/utils_event.h
        hal/utils/include/utils_increment_macro.h
        hal/utils/include/utils_list.h
        hal/utils/include/utils_repeat_macro.h
        hal/utils/src/utils_assert.c
        hal/utils/src/utils_event.c
        hal/utils/src/utils_list.c
        hal/utils/src/utils_syscalls.c
        hpl/core/hpl_core_m0plus_base.c
        hpl/core/hpl_core_port.h
        hpl/core/hpl_init.c
        hpl/dmac/hpl_dmac.c
        hpl/gclk/hpl_gclk.c
        hpl/gclk/hpl_gclk_base.h
        hpl/pm/hpl_pm.c
        hpl/pm/hpl_pm_base.h
        hpl/port/hpl_gpio_base.h
        hpl/sysctrl/hpl_sysctrl.c
        hpl/tc/hpl_tc.c
        hpl/tc/hpl_tc_base.h
        hri/hri_ac_d21.h
        hri/hri_adc_d21.h
        hri/hri_d21.h
        hri/hri_dac_d21.h
        hri/hri_dmac_d21.h
        hri/hri_dsu_d21.h
        hri/hri_eic_d21.h
        hri/hri_evsys_d21.h
        hri/hri_gclk_d21.h
        hri/hri_hmatrixb_d21.h
        hri/hri_i2s_d21.h
        hri/hri_mtb_d21.h
        hri/hri_nvic_d21.h
        hri/hri_nvmctrl_d21.h
        hri/hri_pac_d21.h
        hri/hri_pm_d21.h
        hri/hri_port_d21.h
        hri/hri_rtc_d21.h
        hri/hri_sercom_d21.h
        hri/hri_sysctrl_d21.h
        hri/hri_systemcontrol_d21.h
        hri/hri_systick_d21.h
        hri/hri_tc_d21.h
        hri/hri_tcc_d21.h
        hri/hri_usb_d21.h
        hri/hri_wdt_d21.h
        samd21a/armcc/Device/SAMD21/Source/system_samd21.c
        samd21a/gcc/gcc/startup_samd21.c
        samd21a/gcc/system_samd21.c
        samd21a/include/component/ac.h
        samd21a/include/component/adc.h
        samd21a/include/component/dac.h
        samd21a/include/component/dmac.h
        samd21a/include/component/dsu.h
        samd21a/include/component/eic.h
        samd21a/include/component/evsys.h
        samd21a/include/component/gclk.h
        samd21a/include/component/hmatrixb.h
        samd21a/include/component/i2s.h
        samd21a/include/component/mtb.h
        samd21a/include/component/nvmctrl.h
        samd21a/include/component/pac.h
        samd21a/include/component/pm.h
        samd21a/include/component/port.h
        samd21a/include/component/rtc.h
        samd21a/include/component/sercom.h
        samd21a/include/component/sysctrl.h
        samd21a/include/component/tc.h
        samd21a/include/component/tcc.h
        samd21a/include/component/usb.h
        samd21a/include/component/wdt.h
        samd21a/include/instance/ac.h
        samd21a/include/instance/adc.h
        samd21a/include/instance/dac.h
        samd21a/include/instance/dmac.h
        samd21a/include/instance/dsu.h
        samd21a/include/instance/eic.h
        samd21a/include/instance/evsys.h
        samd21a/include/instance/gclk.h
        samd21a/include/instance/i2s.h
        samd21a/include/instance/mtb.h
        samd21a/include/instance/nvmctrl.h
        samd21a/include/instance/pac0.h
        samd21a/include/instance/pac1.h
        samd21a/include/instance/pac2.h
        samd21a/include/instance/pm.h
        samd21a/include/instance/port.h
        samd21a/include/instance/rtc.h
        samd21a/include/instance/sbmatrix.h
        samd21a/include/instance/sercom0.h
        samd21a/include/instance/sercom1.h
        samd21a/include/instance/sercom2.h
        samd21a/include/instance/sercom3.h
        samd21a/include/instance/sercom4.h
        samd21a/include/instance/sercom5.h
        samd21a/include/instance/sysctrl.h
        samd21a/include/instance/tc3.h
        samd21a/include/instance/tc4.h
        samd21a/include/instance/tc5.h
        samd21a/include/instance/tc6.h
        samd21a/include/instance/tc7.h
        samd21a/include/instance/tcc0.h
        samd21a/include/instance/tcc1.h
        samd21a/include/instance/tcc2.h
        samd21a/include/instance/usb.h
        samd21a/include/instance/wdt.h
        samd21a/include/pio/samd21e15a.h
        samd21a/include/pio/samd21e16a.h
        samd21a/include/pio/samd21e17a.h
        samd21a/include/pio/samd21e18a.h
        samd21a/include/pio/samd21g15a.h
        samd21a/include/pio/samd21g16a.h
        samd21a/include/pio/samd21g17a.h
        samd21a/include/pio/samd21g17au.h
        samd21a/include/pio/samd21g18a.h
        samd21a/include/pio/samd21g18au.h
        samd21a/include/pio/samd21j15a.h
        samd21a/include/pio/samd21j16a.h
        samd21a/include/pio/samd21j17a.h
        samd21a/include/pio/samd21j18a.h
        samd21a/include/component-version.h
        samd21a/include/sam.h
        samd21a/include/samd21.h
        samd21a/include/samd21e15a.h
        samd21a/include/samd21e16a.h
        samd21a/include/samd21e17a.h
        samd21a/include/samd21e18a.h
        samd21a/include/samd21g15a.h
        samd21a/include/samd21g16a.h
        samd21a/include/samd21g17a.h
        samd21a/include/samd21g17au.h
        samd21a/include/samd21g18a.h
        samd21a/include/samd21g18au.h
        samd21a/include/samd21j15a.h
        samd21a/include/samd21j16a.h
        samd21a/include/samd21j17a.h
        samd21a/include/samd21j18a.h
        samd21a/include/system_samd21.h
        atmel_start.c
        atmel_start.h
        atmel_start_pins.h
        driver_init.c
        driver_init.h
        main.c)

add_executable(pwm3 ${SOURCE_FILES})